# Legends-of-Runeterra-deckroll

./: .flake8  .gitignore  Card names 2022-09-17.txt  Card names 2022-12-08.txt  CardData.py  CardPool.py  Deck.py  Deckroll.py  DiscordBot.py  Draft.py  README.md  Random Deck Tournament 2022-09-14.xlsx  Random Deck Tournament Reroll Decks 2022-09-14.xlsx  assemble_card_image.py  card_names.txt  discord_images.py  excel_spreadsheat_scripts.py  lor_discord_bot.service  main.py  pyproject.toml  start_discord_bot.sh
card_sets/: set7-en_us.json
created_deckroll_excel_spreadsheats/: Deckroll-2023-02-11.xlsx
